#ifndef MENU_H
#define MENU_H

#include "transport.h"

class Menu {
public:
    void run();
};

#endif